Ensure checkout repo.

--- a/.github/workflows/publish-package.yaml
+++ b/.github/workflows/publish-package.yaml
@@ -63,6 +63,9 @@ jobs:
       - publish-package
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Calculate variables
         shell: bash
         run: |
